# Multiagent-Sales-Pipeline-with-CrewAI

./: .gitignore  README.md  pyproject.toml
src/sales_pipeline_flow/: main.py
src/sales_pipeline_flow/crews/email_writing_crew/: email_writing_crew.py
src/sales_pipeline_flow/crews/email_writing_crew/config/: agents.yaml  tasks.yaml
src/sales_pipeline_flow/crews/lead_scoring_crew/: lead_scoring_crew.py  pydantic_schemas.py
src/sales_pipeline_flow/crews/lead_scoring_crew/config/: tasks.yaml
